--- a/config/ade20k-resnet101dilated-ppm_deepsup.yaml
+++ b/config/ade20k-resnet101dilated-ppm_deepsup.yaml
@@ -1,5 +1,5 @@
 DATASET:
-  root_dataset: "./data/"
+  root_dataset: "//philly/eu2/resrchvc/v-miyin/data/"
   list_train: "./data/training.odgt"
   list_val: "./data/validation.odgt"
   num_class: 150
