--- a/config/ade20k-mobilenetv2dilated-c1_deepsup.yaml
+++ b/config/ade20k-mobilenetv2dilated-c1_deepsup.yaml
@@ -10,12 +10,12 @@ DATASET:
   random_flip: True
 
 MODEL:
-  arch_encoder: "mobilenetv2dilated"
+  arch_encoder: "resnet101dilated"
   arch_decoder: "c1_deepsup"
   fc_dim: 320
 
 TRAIN:
-  batch_size_per_gpu: 3
+  batch_size_per_gpu: 2
   num_epoch: 20
   start_epoch: 0
   epoch_iters: 5000
@@ -39,4 +39,4 @@ TEST:
   checkpoint: "epoch_20.pth"
   result: "./"
 
-DIR: "ckpt/ade20k-mobilenetv2dilated-c1_deepsup"
+DIR: "ckpt/ade20k-resnet101dilated-c1_deepsup"
